--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
       <nav>
         <ul class="list">
           {% for page in pages|sort(attribute='title') %}
-          <li><a href="{{ SITEURL }}/{{ page.url }}#{{ page.slug }}">{{ page.title }}</a></li>
+          <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
           {% endfor %}
           {% for name, link in LINKS %}
           <li><a href="{{ link }}" target="_blank">{{ name }}</a></li>
