--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   <div>
     {% if summarise or article.metadata['summary'] or article.metadata['summarize'] %}
       {{ article.summary }}
-      <a class="btn" href="{{ SITEURL }}/{{ article.url }}#{{ article.slug }}">Continue reading</a>
+      <a class="btn" href="{{ SITEURL }}/{{ article.url }}">Continue reading</a>
     {% else %}
       {{ article.content }}
     {% endif %}
